# Data-Engineering

./: .gitignore  pyproject.toml
dbt/taxi_rides_ny/: .gitignore  duckd_jupyter.ipynb  ingest-v2-memory_safe.py  ingest.py
dbt/taxi_rides_ny/macros/: get_vendor_data.sql
dbt/taxi_rides_ny/models/marts/: dim_vendors.sql  fct_trips.sql
dbt/taxi_rides_ny/models/staging/: sources.yaml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
kafka-flint/: README  kafka.ipynb
kafka-flint/src/: models.py
kafka-flint/src/consumers/: consumer_postgres.py
kafka-flint/src/job/: aggregation_job.py
kafka-flint/src/producers/: producer.py
kestra/: Dockerfile  docker-compose.yaml  gcp_ingest_module3.py  ingest_data.py
pipeline/: Untitled.ipynb
pipeline/dbt/taxi_rides_ny/models/staging/: sources.yaml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
spark/: data_preparator.py  dataproc-spark-job-sql.py  spark-gcs.ipynb  spark-sql.ipynb  spark.ipynb
