[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
    "kafka-python>=2.3.0",
]

[dependency-groups]
dev = [
    "dlt[bigquery,duckdb,gs]>=1.24.0",
    "duckdb>=1.5.2",
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
